fixed scrollbars showing for a moment during intro animation for thumbs

--- a/src/FilePage/RelatedFiles.css
+++ b/src/FilePage/RelatedFiles.css
@@ -24,6 +24,7 @@
     flex-direction: column;
     overflow-x: auto;
     width: max-content;
+    overflow: hidden;
 }
 
 .relatedThumbnails.mobile {
@@ -72,7 +73,6 @@
 .relatedImages {
     max-height:inherit;
 }
-
 
 .relatedThumbnails.mobile.landscape {
     flex-direction: column;
